[iOS] Exit fullscreen when tapping the collapsed toolbar

This CL makes sure that it is possible to exit fullscreen by tapping the
collapsed toolbar.
For now, it is possible to exit it by tapping the steady view.

Bug: 862557
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I31667dd679d1b38f41d819197aedc54c76024ab4
Reviewed-on: https://chromium-review.googlesource.com/1184912
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585010}