ios/chrome/browser/ui/toolbar/adaptive/primary_toolbar_coordinator.mm
@@ -156,6 +156,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
                              animated:NO];
 }
 
+- (void)exitFullscreen {
+  FullscreenControllerFactory::GetInstance()
+      ->GetForBrowserState(self.browserState)
+      ->ResetModel();
+}
+
 #pragma mark - FakeboxFocuser
 
 - (void)focusFakebox {
