ios/chrome/browser/ui/toolbar/adaptive/primary_toolbar_view.h
@@ -48,6 +48,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 // Button to cancel the edit of the location bar.
 @property(nonatomic, strong, readonly) UIButton* cancelButton;
 
+// Button taking the full size of the toolbar. Expands the toolbar when  tapped.
+@property(nonatomic, strong, readonly) UIButton* collapsedToolbarButton;
+
 // Constraints to be activated when the location bar is expanded and positioned
 // relatively to the cancel button.
 @property(nonatomic, strong, readonly)
