ios/chrome/browser/ui/toolbar/adaptive/primary_toolbar_view.mm
@@ -77,6 +77,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 // Button to cancel the edit of the location bar, redefined as readwrite.
 @property(nonatomic, strong, readwrite) UIButton* cancelButton;
+// Button taking the full size of the toolbar. Expands the toolbar when  tapped.
+// Redefined as readwrite.
+@property(nonatomic, strong, readwrite) UIButton* collapsedToolbarButton;
 
 // Constraints for the location bar, redefined as readwrite.
 @property(nonatomic, strong, readwrite)
@@ -113,6 +116,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 @synthesize bookmarkButton = _bookmarkButton;
 @synthesize toolsMenuButton = _toolsMenuButton;
 @synthesize cancelButton = _cancelButton;
+@synthesize collapsedToolbarButton = _collapsedToolbarButton;
 @synthesize expandedConstraints = _expandedConstraints;
 @synthesize contractedConstraints = _contractedConstraints;
 @synthesize contractedNoMarginConstraints = _contractedNoMarginConstraints;
@@ -144,6 +148,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   [self setUpCancelButton];
   [self setUpLocationBar];
   [self setUpProgressBar];
+  [self setUpCollapsedToolbarButton];
 
   [self setUpConstraints];
 }
@@ -292,6 +297,14 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   [self addSubview:self.progressBar];
 }
 
+// Sets the collapsedToolbarButton up.
+- (void)setUpCollapsedToolbarButton {
+  self.collapsedToolbarButton = [[UIButton alloc] init];
+  self.collapsedToolbarButton.translatesAutoresizingMaskIntoConstraints = NO;
+  self.collapsedToolbarButton.hidden = YES;
+  [self addSubview:self.collapsedToolbarButton];
+}
+
 // Sets the constraints up.
 - (void)setUpConstraints {
   id<LayoutGuideProvider> safeArea = SafeAreaLayoutGuideForView(self);
@@ -409,6 +422,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     [self.progressBar.heightAnchor
         constraintEqualToConstant:kProgressBarHeight],
   ]];
+
+  // CollapsedToolbarButton constraints.
+  AddSameConstraints(self, self.collapsedToolbarButton);
 }
 
 #pragma mark - Property accessors
