ios/chrome/browser/ui/toolbar/adaptive/primary_toolbar_view_controller.mm
@@ -103,6 +103,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   // set to topLayoutGuide after the view creation on iOS 10.
   [self.view setUp];
 
+  [self.view.collapsedToolbarButton addTarget:self
+                                       action:@selector(exitFullscreen)
+                             forControlEvents:UIControlEventTouchUpInside];
+
   if (IsCompactHeight(self)) {
     self.view.locationBarExtraBottomPadding.constant =
         kAdaptiveLocationBarExtraVerticalMargin;
@@ -173,6 +177,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
       [self.buttonFactory.toolbarConfiguration
           locationBarBackgroundColorWithVisibility:alphaValue];
   self.previousFullscreenProgress = progress;
+
+  self.view.collapsedToolbarButton.hidden = progress > 0.05;
 }
 
 - (void)updateForFullscreenEnabled:(BOOL)enabled {
@@ -261,6 +267,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   [NSLayoutConstraint
       deactivateConstraints:self.view.contractedNoMarginConstraints];
   [NSLayoutConstraint deactivateConstraints:self.view.expandedConstraints];
+}
+
+// Exits fullscreen.
+- (void)exitFullscreen {
+  [self.delegate exitFullscreen];
 }
 
 @end
