ios/chrome/browser/ui/toolbar/adaptive/primary_toolbar_view_controller_delegate.h
@@ -15,6 +15,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 - (void)viewControllerTraitCollectionDidChange:
     (UITraitCollection*)previousTraitCollection;
 
+// Exits fullscreen.
+- (void)exitFullscreen;
+
 @end
 
 #endif  // IOS_CHROME_BROWSER_UI_TOOLBAR_ADAPTIVE_PRIMARY_TOOLBAR_VIEW_CONTROLLER_DELEGATE_H_
